--- a/src/Trackr/Trackr.csproj
+++ b/src/Trackr/Trackr.csproj
@@ -51,6 +51,9 @@
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="js\app.js" />
+    <Content Include="js\AppController.js" />
+    <Content Include="js\TaskViewModel.js" />
+    <Content Include="js\TreeNodeViewModel.js" />
     <Content Include="lib\jquery-1.7.1.js" />
     <Content Include="lib\jsonrpc-0.1.3.js" />
     <Content Include="lib\knockout-2.0.0.debug.js" />
