--- a/src/Trackr/Trackr.csproj
+++ b/src/Trackr/Trackr.csproj
@@ -52,15 +52,17 @@
     <Content Include="css\reset.css" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
-    <Content Include="js\app.js" />
     <Content Include="js\AppController.js" />
-    <Content Include="js\BottomScrollBinding.js" />
+    <Content Include="js\bindingHandlers\bottomScroll.js" />
+    <Content Include="js\server.js" />
+    <Content Include="js\on.js" />
     <Content Include="js\TaskDetailViewModel.js" />
     <Content Include="js\TaskSummaryViewModel.js" />
     <Content Include="js\TreeNodeViewModel.js" />
     <Content Include="lib\jquery-1.7.1.js" />
     <Content Include="lib\jsonrpc-0.1.3.js" />
     <Content Include="lib\knockout-2.0.0.debug.js" />
+    <Content Include="lib\require.js" />
     <Content Include="lib\signals.js" />
     <Content Include="lib\signals.min.js" />
     <Content Include="lib\underscore.js" />
