--- a/src/Trackr/Trackr.csproj
+++ b/src/Trackr/Trackr.csproj
@@ -54,6 +54,7 @@
     <Content Include="Global.asax" />
     <Content Include="js\AppController.js" />
     <Content Include="js\BottomScrollBindingHandler.js" />
+    <Content Include="js\main.js" />
     <Content Include="js\server.js" />
     <Content Include="js\on.js" />
     <Content Include="js\TaskDetailViewModel.js" />
